Test/senamic_test/zzm_test/test2.output
Error type 15 at Line 7: Struct redefined field or assign "="
Error type 15 at Line 12: Struct redefined field or assign "aaa"
Error type 3 at Line 19: Redefined variable "a1"
Error type 17 at Line 20: None Defined Struct "D"
Error type 12 at Line 21: Not an integer "["
Error type 11 at Line 22: Not a function "a1"
Error type 13 at Line 23: Illegal use of "."
Error type 14 at Line 26: Non-existent field "j"
Error type 5 at Line 26: Type mismatched for assignment "="
